--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database name: springdemo, need to change the ddl auto if doing something else
 spring.datasource.url=jdbc:postgresql://localhost:5432/springdemo
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=admin
 spring.jpa.hibernate.ddl-auto=create-drop
 # <create | create-drop | update | validate | none>
